[package]
name = "mario-minesweeper"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
eframe = { version = "0.31.0", features = ["default"] }
egui_extras = { version = "0.31.0", features = ["all_loaders"] }
image = { version = "0.25.0", features = ["ico", "webp"] }
rand = "0.10.0"

[build-dependencies]
embed-resource = "2.5.1"
